day-09/voting-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-dev
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting-dev
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting
  namespace: voting-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: voting.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
